k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beaver-research
  labels:
    name: beaver-research
    environment: production
